fix(lib): ripple overflowing icon buttons

--- a/apps/admin-gui/src/_styles.scss
+++ b/apps/admin-gui/src/_styles.scss
@@ -685,6 +685,10 @@ button {
   letter-spacing: normal;
 }
 
+.mdc-icon-button {
+  border-radius: 50% !important;
+}
+
 .action-button {
   display: inline-block !important;
 }
